; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_setting_action_ok_bind_all_save_autoconfig.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_setting_action_ok_bind_all_save_autoconfig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@MSG_AUTOCONFIG_FILE_SAVED_SUCCESSFULLY = common dso_local global i32 0, align 4
@MESSAGE_QUEUE_ICON_DEFAULT = common dso_local global i32 0, align 4
@MESSAGE_QUEUE_CATEGORY_INFO = common dso_local global i32 0, align 4
@MSG_AUTOCONFIG_FILE_ERROR_SAVING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32)* @setting_action_ok_bind_all_save_autoconfig to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setting_action_ok_bind_all_save_autoconfig(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %6, align 4
  store i8* null, i8** %7, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = icmp ne %struct.TYPE_3__* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %39

12:                                               ; preds = %2
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i8* @input_config_get_device_name(i32 %16)
  store i8* %17, i8** %7, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @string_is_empty(i8* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %32, label %21

21:                                               ; preds = %12
  %22 = load i8*, i8** %7, align 8
  %23 = load i32, i32* %6, align 4
  %24 = call i64 @config_save_autoconf_profile(i8* %22, i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %32

26:                                               ; preds = %21
  %27 = load i32, i32* @MSG_AUTOCONFIG_FILE_SAVED_SUCCESSFULLY, align 4
  %28 = call i32 @msg_hash_to_str(i32 %27)
  %29 = load i32, i32* @MESSAGE_QUEUE_ICON_DEFAULT, align 4
  %30 = load i32, i32* @MESSAGE_QUEUE_CATEGORY_INFO, align 4
  %31 = call i32 @runloop_msg_queue_push(i32 %28, i32 1, i32 100, i32 1, i32* null, i32 %29, i32 %30)
  br label %38

32:                                               ; preds = %21, %12
  %33 = load i32, i32* @MSG_AUTOCONFIG_FILE_ERROR_SAVING, align 4
  %34 = call i32 @msg_hash_to_str(i32 %33)
  %35 = load i32, i32* @MESSAGE_QUEUE_ICON_DEFAULT, align 4
  %36 = load i32, i32* @MESSAGE_QUEUE_CATEGORY_INFO, align 4
  %37 = call i32 @runloop_msg_queue_push(i32 %34, i32 1, i32 100, i32 1, i32* null, i32 %35, i32 %36)
  br label %38

38:                                               ; preds = %32, %26
  store i32 0, i32* %3, align 4
  br label %39

39:                                               ; preds = %38, %11
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i8* @input_config_get_device_name(i32) #1

declare dso_local i32 @string_is_empty(i8*) #1

declare dso_local i64 @config_save_autoconf_profile(i8*, i32) #1

declare dso_local i32 @runloop_msg_queue_push(i32, i32, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @msg_hash_to_str(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
